[gd_scene load_steps=5 format=3 uid="uid://pgr1hxlmxihq"]

[ext_resource type="Script" uid="uid://edknpfh2mqcg" path="res://scenes/common/doors.gd" id="1_4a4cn"]
[ext_resource type="Texture2D" uid="uid://bjctqwh5ygacg" path="res://assets/tiles/animations/dooranim.png" id="2_ufeaj"]
[ext_resource type="PackedScene" uid="uid://c3fn22nsfymhg" path="res://scenes/mapmechanics/tp.tscn" id="3_l4ndq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xj4xd"]
size = Vector2(19.5, 48)

[node name="doors_tp" type="Area2D" groups=["teleporter"]]
y_sort_enabled = true
script = ExtResource("1_4a4cn")

[node name="dooropener" type="CollisionShape2D" parent="."]
position = Vector2(14.75, 0)
shape = SubResource("RectangleShape2D_xj4xd")

[node name="door1" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -8)
texture = ExtResource("2_ufeaj")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="door2" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 8)
scale = Vector2(1, -1)
texture = ExtResource("2_ufeaj")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="tp" parent="." instance=ExtResource("3_l4ndq")]

[node name="areatppoligon" parent="tp/areatp" index="0"]
polygon = PackedVector2Array(-8, -16, -8, 16, 5, 16, 5, -16)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]

[editable path="tp"]
